--- a/BootStrap/my_css_is_easy_ii.html
+++ b/BootStrap/my_css_is_easy_ii.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="my_css_is_easy.css">
     <title>Bootstrap Example</title>
   </head>
   <body>
